:star: feat: deploy script

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,21 @@
-FOREIGN_IP=1.1.1.1
+# VPN Proxy Configuration
+# Copy this file to .env and fill in your values
 
-VMESS_TCP_PORT=8082
-VMESS_WS_PORT=8001
-VLESS_TCP_REALITY_PORT=8444
-VLESS_GRPC_REALITY_PORT=2054
-TROJAN_WS_PORT=2084
-SHADOWSOCKS_TCP_PORT=1081
+# Foreign server IP address (the server you're proxying to)
+FOREIGN_IP=your.foreign.server.ip
+
+# Inbound ports (ports this proxy listens on)
+VMESS_TCP_INBOUND_PORT=8081
+VMESS_WS_INBOUND_PORT=8000
+VLESS_TCP_REALITY_INBOUND_PORT=8443
+VLESS_GRPC_REALITY_INBOUND_PORT=2053
+TROJAN_WS_INBOUND_PORT=2083
+SHADOWSOCKS_TCP_INBOUND_PORT=1080
+
+# Outbound ports (ports on the foreign server)
+VMESS_TCP_OUTBOUND_PORT=8081
+VMESS_WS_OUTBOUND_PORT=8000
+VLESS_TCP_REALITY_OUTBOUND_PORT=8443
+VLESS_GRPC_REALITY_OUTBOUND_PORT=2053
+TROJAN_WS_OUTBOUND_PORT=2083
+SHADOWSOCKS_TCP_OUTBOUND_PORT=1080
